Import materialize.scss - can configure  M styles to all <p>, <li>...etc in one place

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="manifest" href="/manifest.json">
-    <!-- Materialize CSS Dependencies -->
+    <!-- Materialize CSS Dependencies (JS imported as an NPM module)-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Firebase UI -->
