Use flexbox to display study groups

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <!-- Firebase UI -->
     <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css" />
-    <title>feynman-project</title>
+    <title>Feynman</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but feynman-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Feynman doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
