--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,18 @@
     <!-- Firebase UI -->
     <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css" />
+
     <title>Feynman</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but Feynman doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
