--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
     <noscript>
       <strong>We're sorry but Feynman doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script async defer
+    <!-- <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-    </script>
+    </script> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
